Simplify poms